--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta name="description" content="Us gril available for sex, just chat, meet and fuck">
     <meta name="keywords" content="Landing page, datting landing page, web developer, adult content, adult landing page, 18+ landing page">
     <meta name="author" content="Jakaria Talukdar">
-    <title>citysweeties || Most famous online dating platform</title>
+    <title>secretflirtsnearby || Most famous online dating platform</title>
     <link rel="stylesheet" href="style.html">
 </head>
 <body>
     <section>
         <div class="container">
             <div class="section1 sections">
-                <a href="https://krabiclick.com/?a=10046&c=3377&s1=DESO" class="ancor"><h1 class="offerName">citysweeties</h1></a>
+                <a href="https://krabiclick.com/?a=10046&c=3377&s1=DESO" class="ancor"><h1 class="offerName">secretflirtsnearby</h1></a>
             </div>
             <div class="section2 sections">
                 <a href="https://krabiclick.com/?a=10046&c=3377&s1=DESO"><img src="images/12.jpg" alt=""></a>
